# candescence

./: .Rhistory  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  candescence.sample.toml  candescence.toml.example  environment.yml  pyproject.toml
.Rproj.user/3938DD68/: persistent-state
.Rproj.user/3938DD68/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/3938DD68/sources/prop/: ED8BF649  INDEX
.Rproj.user/shared/notebooks/: paths
data/sample/: README.md  manually_labelled_images.csv
docs/: architecture_diagram.md  audit_report.md  phase2_interface_audit.md  phase5_diffusion_blueprint.md  tendril_vae_architecture.txt
docs/tutorials/: 01_getting_started.md  02_using_your_own_images.md  03_the_models.md  04_diffusion.md  05_varasana.md  06_grace.md  07_varasana_generator.md  README.md
obsolete/: latent_explorer_removed_sections.py
obsolete/strategy_15_cond_tendrils/: cond_tendrils.py  test_strategy_15_old.py
scripts/: build_sample_dataset.py  example_config_s15.json  example_config_s16.json  export_manuscript_umap_figures.py  hue_day_medium_plate_variance.py  hue_media_confounding_check.py  hue_media_confounding_full.py  hue_medium_vs_plate_variance.py  populate_zoo.py  quantify_hue_nuisance.py  run_bio_label_eval_on_hue_residuals.py  run_greyscale_s14_analysis.py  run_hue_nuisance_s14.py  summarize_hue_qc_pc1_table.py  train_tlv.py  write_args_uc_vae.py
scripts/production/: register_model.py
scripts/research/: reproduce_37_tendrils.py
src/: __init__.py  init.R  init.py  ready_to_delete.md
src/candescence/: __init__.py
src/candescence/analysis/: __init__.py  morphology_stats.py  visualization.py
src/candescence/core/: __init__.py  config.py  dataset_zoo.py  logging_config.py  model_catalog.py  model_zoo.py  morphology.py  projects.py  settings.py
src/candescence/detection/: __init__.py  specs.py
src/candescence/detection/configs/: __init__.py  fcos_resnet101_fpn.py
src/candescence/detection/datasets/: __init__.py  candida_dataset.py
src/candescence/detection/evaluation/: __init__.py  evaluator.py  visualizer.py
src/candescence/detection/inference/: __init__.py  cell_extractor.py  detector.py
src/candescence/detection/legacy/: README.md  setup_legacy_env.sh
src/candescence/detection/modern/: __init__.py  dataset.py  inference.py  model.py  trainer.py
src/candescence/detection/service/: __init__.py  client.py  worker.py
src/candescence/detection/training/: __init__.py  curriculum_trainer.py  log_parser.py
src/candescence/generative/: __init__.py
src/candescence/generative/fastgan/: __init__.py  inference.py  models.py  specs.py
src/candescence/interface/: __init__.py  app.py  base.py  data_utils.py  home.py  model_loader.py  tlv_explorer.py
src/candescence/interface/apps/: README.md  __init__.py  latent_explorer_app.py  training_app.py
src/candescence/interface/components/: __init__.py  dataset_report.py  detection_view.py  image_panel.py  interpolation.py  latent_explorer.py  training_config.py  training_progress.py  training_summary.py
src/candescence/interface/core/: __init__.py  components.py  theme.py  training_jobs.py
src/candescence/interface/pages/: 00_Home.py  0_Home.py  10_TLV_Training.py  10_Train_Detector.py  11_TLV_Explorer.py  12_TLV_Diffusion.py  1_TLV_Training.py  20_Varasana_Detection.py  21_Varasana_Training.py  22_Varasana_Generator.py  2_TLV_Explorer.py  30_Grace_Detection.py  3_Varasana_Training.py  40_Train_Detector.py  41_Model_Registry.py  42_Dataset_Manager.py  43_Model_Quality.py  4_Model_Registry.py  5_Dataset_Manager.py  6_TLV_Diffusion.py  7_Model_Quality.py  8_Varasana_Detection.py  9_Grace_Detection.py  __init__.py
src/candescence/interface/training/: __init__.py  cond_utils.py  detection_state.py  detection_trainer.py  streamlit_trainer.py  training_state.py
src/candescence/scripts/: __init__.py  clean_metadata.py
src/candescence/tlv/: __init__.py  factory.py  losses.py  utilities.py
src/candescence/tlv/analysis/: __init__.py  batch_effect_diagnostics.py  hue_nuisance_qc.py  hypergeometric_enrichment.py  image_distance_metrics.py  image_feature_table.py  latent_space_metrics.py  latent_trajectory.py  manuscript_figures.py  pc_feature_correlation.py  replicate_consistency.py  skip_channel_stats.py  skip_saliency.py  skip_traversal.py  tendril_rank_change.py
src/candescence/tlv/architectures/: __init__.py  (+15 more)
src/grace/: gracemacro_2pkl.py  gracemacro_json2pkl.R  gracetc_2pkl.py  gracetc_json2pkl.R  init.R
src/grace/0-prep-learning-set/: gracemacro_2pkl.py  gracemacro_json2pkl.R  gracetc_2pkl.py  gracetc_json2pkl.R
src/grace/0.2-performance-tc/: generate_train_val_events.R  generate_train_val_events.py
src/grace/1-select-taus/: select-taus.Rmd  select-taus.nb.html
src/grace/2-macro-alone/: generate_test_objects.py
src/grace/3-tc-alone/: generate_test_objects.py
src/grace/performance_macro/: generate_train_val_events.py
tests/: test_detection.py  test_model_catalog.py  test_settings.py  test_tendril_vae.py
tests/detection/: test_modern.py  test_service.py
tests/generative/: test_fastgan.py
tests/interface/: test_detection_page.py  test_image_source_picker.py  test_metadata_merge.py  test_phase5_6_pages.py  test_research_mode_toggle.py
tests/tlv/: test_diffusion.py  test_hsv_adjustment.py  test_strategy_15.py
tests/tlv/analysis/: test_bio_label_eval.py  test_hue_nuisance_qc.py  test_hypergeometric_enrichment.py  test_image_distance_metrics.py  test_image_feature_table.py  test_latent_space_metrics.py  test_latent_space_metrics_local.py  test_pc_feature_correlation.py  test_replicate_consistency.py  test_skip_channel_stats.py  test_skip_saliency.py  test_skip_traversal.py  test_tendril_rank_change.py
tests/tlv/data/: test_grayscale_bg_normalize.py  test_sample_dataset.py
tests/tlv/inference/: test_tendril_replicate_diagnostics.py
tutorials/: tutorial_diffusion.ipynb  tutorial_interface.ipynb  tutorial_latent_explorer.ipynb  tutorial_production_workflow.ipynb  tutorial_tendril_vae.ipynb  tutorial_varasana_detection.ipynb
(+107 files in other folders)
