[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candescence"
version = "0.1.0"
description = "Deep learning for Candida albicans morphology analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Hallett Lab", email = "mike.hallett@uwo.ca"}
]
keywords = [
    "deep-learning",
    "vae",
    "variational-autoencoder",
    "candida",
    "morphology",
    "microscopy",
    "bioinformatics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "Pillow>=9.0.0",
    "openpyxl>=3.1.0",
    "lpips>=0.1.4",
    "piqa>=1.3.0",
    # Streamlit GUI stack (required to run the app).
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "opencv-python>=4.7.0",
    # TOML config-file support; stdlib tomllib is used on Python 3.11+.
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
analysis = [
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.0",
    "python-igraph>=0.10.0",
    "leidenalg>=0.9.0",
    "scikit-bio>=0.5.0",
]
full = [
    "candescence[dev,analysis]",
]

[project.urls]
Homepage = "https://github.com/hallettmiket/candescence_new"
Documentation = "https://github.com/hallettmiket/candescence_new#readme"
Repository = "https://github.com/hallettmiket/candescence_new"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
candescence = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["candescence"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=candescence --cov-report=term-missing"
