[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candescence"
version = "0.1.0"
description = "Deep learning for Candida albicans morphology analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Hallett Lab", email = "michael.hallett@uwo.ca"}
]
keywords = [
    "deep-learning",
    "vae",
    "variational-autoencoder",
    "candida",
    "morphology",
    "microscopy",
    "bioinformatics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "Pillow>=9.0.0",
    "scikit-image>=0.21.0",   # rgb2hsv in tlv.data.dataset
    "openpyxl>=3.1.0",
    "lpips>=0.1.4",
    "piqa>=1.3.0",
    "torchmetrics>=1.0.0",    # log_cosh_error in tlv.losses
    # Streamlit GUI stack (required to run the app).
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "opencv-python>=4.7.0",
    # Config handling for the ported diffusion model checkpoints.
    "omegaconf>=2.3.0",
    # TOML config-file support; stdlib tomllib is used on Python 3.11+.
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
analysis = [
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.0",
    "python-igraph>=0.10.0",
    "leidenalg>=0.9.0",
    "scikit-bio>=0.5.0",
]
notebooks = [
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
]
full = [
    "candescence[dev,analysis,notebooks]",
]

[project.urls]
Homepage = "https://github.com/hallettmiket/candescence"
Documentation = "https://github.com/hallettmiket/candescence#readme"
Repository = "https://github.com/hallettmiket/candescence"

# --- uv configuration -------------------------------------------------------
# torch/torchvision are pulled from the PyTorch CUDA 11.8 wheel index (matching
# the legacy conda `pytorch-cuda=11.8` pin) rather than the default PyPI build.
# The `explicit = true` flag keeps this index from being consulted for any other
# package. To move to a newer CUDA, change the URL (e.g. .../whl/cu124) and
# re-run `uv lock`.
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
candescence = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["candescence"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=candescence --cov-report=term-missing"
